reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_enum_variant_typevar-3.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_rust_code :: <\nTestIngestRelation<TestFlattenIdent, TestFlattenIdentData> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::serde::TestIngestRelation<
                super::types::reflectapi_demo::tests::serde::TestFlattenIdent,
                super::types::reflectapi_demo::tests::serde::TestFlattenIdentData,
            >,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::serde::TestIngestRelation<
                super::types::reflectapi_demo::tests::serde::TestFlattenIdent,
                super::types::reflectapi_demo::tests::serde::TestFlattenIdentData,
            >,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod serde {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestFlattenIdent {
                    pub job_id: u64,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestFlattenIdentData {
                    pub payload: std::string::String,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestIdentityData<I, D> {
                    #[serde(flatten)]
                    pub identity: I,
                    #[serde(flatten)]
                    pub data: D,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub enum TestIngestRelation<I, D> {
                    Insert(
                        super::super::super::reflectapi_demo::tests::serde::TestIdentityData<I, D>,
                    ),
                    Remove(
                        super::super::super::reflectapi_demo::tests::serde::TestIdentityData<I, D>,
                    ),
                    Empty,
                }
            }
        }
    }
}
