reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_enum_variant_typevar-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "oneOf": [
                  {
                    "type": "object",
                    "title": "Insert<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                    "required": [
                      "Insert"
                    ],
                    "properties": {
                      "Insert": {
                        "allOf": [
                          {
                            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdent"
                          },
                          {
                            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdentData"
                          },
                          {
                            "type": "object",
                            "title": "reflectapi_demo.tests.serde.TestIdentityData<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                            "properties": {}
                          }
                        ]
                      }
                    }
                  },
                  {
                    "type": "object",
                    "title": "Remove<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                    "required": [
                      "Remove"
                    ],
                    "properties": {
                      "Remove": {
                        "allOf": [
                          {
                            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdent"
                          },
                          {
                            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdentData"
                          },
                          {
                            "type": "object",
                            "title": "reflectapi_demo.tests.serde.TestIdentityData<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                            "properties": {}
                          }
                        ]
                      }
                    }
                  },
                  {
                    "const": "Empty"
                  }
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "oneOf": [
                    {
                      "type": "object",
                      "title": "Insert<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                      "required": [
                        "Insert"
                      ],
                      "properties": {
                        "Insert": {
                          "allOf": [
                            {
                              "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdent"
                            },
                            {
                              "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdentData"
                            },
                            {
                              "type": "object",
                              "title": "reflectapi_demo.tests.serde.TestIdentityData<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                              "properties": {}
                            }
                          ]
                        }
                      }
                    },
                    {
                      "type": "object",
                      "title": "Remove<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                      "required": [
                        "Remove"
                      ],
                      "properties": {
                        "Remove": {
                          "allOf": [
                            {
                              "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdent"
                            },
                            {
                              "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenIdentData"
                            },
                            {
                              "type": "object",
                              "title": "reflectapi_demo.tests.serde.TestIdentityData<reflectapi_demo.tests.serde.TestFlattenIdent, reflectapi_demo.tests.serde.TestFlattenIdentData>",
                              "properties": {}
                            }
                          ]
                        }
                      }
                    },
                    {
                      "const": "Empty"
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestFlattenIdent": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestFlattenIdent",
        "required": [
          "job_id"
        ],
        "properties": {
          "job_id": {
            "$ref": "#/components/schemas/u64"
          }
        }
      },
      "reflectapi_demo.tests.serde.TestFlattenIdentData": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestFlattenIdentData",
        "required": [
          "payload"
        ],
        "properties": {
          "payload": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u64": {
        "description": "64-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
